Added margin bottom for kesy tours

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </div>
             
             <!-- Kesy Tours Project -->
-            <div class="project-card bg-white rounded-xl overflow-hidden">
+            <div class="project-card bg-white rounded-xl overflow-hidden  mb-16">
                 <div class="w-full">
                     <!-- React-Style Carousel -->
                     <div class="carousel" id="kesy-carousel">
